# ballgame

./: .gitignore  Board.hs  Clean.bat  Clean.sh  Game.hs  Input.hs  Main.hs  Make.bat  Make.sh  README.md  State.hs  ballgame.cabal
src/: Direction.hs  Game.hs  Position.hs  Setup.hs  SolutionTree.hs  Utils.hs
