name:                ballgame
version:             0.0.0.0
synopsis:            A digital version of French solitaire checkers & an A* search on it.
description:         A digital version of French solitaire checkers & an A* search on it.
homepage:            http://github.com/crockeo/ballgame.git
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmail.com
copyright:           (c) 2015
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ballgame
  main-is:             Main.hs

  build-depends:       base >=4.7 && <4.8

  hs-source-dirs:      src/

  default-language:    Haskell2010
